--- a/index.html
+++ b/index.html
@@ -14,10 +14,33 @@
 </head>
 <body>
 	<div class="wrapper">
-<header>
-	<div class="container">
-		<div class="header-body">
+<header class="header">
+	<div class="container r">
+		<div class="header__menu menu">
+
+			<div class="menu__logo">
+				<img src="img/logo.png" alt="" />
+				<div>Book PAY</div>
+			</div>
+
+			<div class="menu__icon icon-menu  header-menu__icon">
+				<span></span>
+				<span></span>
+				<span></span>
+			</div>
 			
+			<nav class="menu__body">
+				<ul class="menu__list">
+					<li><a href="" class="menu__link ">Возможности</a></li>
+					<li><a href="" class="menu__link ">Контакты</a></li>
+					<li><a href="" class="menu__link active">Активировать сертификат</a></li>
+					<li><a href="" class="menu__link ">Цены</a></li>
+				</ul>
+				<ul class="menu__contact">
+					<li><a href="tel:89993526013" class="menu__link menu__link_tel">8 999 352 60 13</a></li>
+					<li><a href="#" class="menu__link menu__link_popup y">Заказать звонок</a></li>
+				</ul>
+			</nav>
 		</div>
 	</div>
 </header>		
@@ -82,9 +105,6 @@
 
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<!-- <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script> -->
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<script src="https://maps.google.com/maps/api/js?sensor=false&amp;key="></script>
 <script src="js/vendors.js"></script>
 <script src="js/main.js"></script>
 <script src="js/custom.js" ></script>
