--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 			<div class="menu__logo">
 				<img src="img/logo.png" alt="" />
-				<div>Book PAY</div>
+				<span>Book PAY</span>
 			</div>
 
 			<div class="menu__icon icon-menu  header-menu__icon">
