--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 			</nav>
 		</div>
 	</div>
-</header>		<section class="main">
+</header>		<section class="main ibg">
+			<img src="img/screen1.jpg" alt=""/>
 			<div class="container">
 				<div class="main__body">
 					<!-- *КОНТЕНТ -->
@@ -53,7 +54,7 @@
 					<ul class="main__list">
 						<li><a href="" class="main__link ">Запись</a></li>
 						<li><a href="" class="main__link ">Учет</a></li>
-						<li><a href="" class="main__link ">Бронирование</a></li>
+						<li><a href="" class="main__link y">Бронирование</a></li>
 						<li><a href="" class="main__link ">Аналитика</a></li>
 						<li><a href="" class="main__link ">Подарочные карты</a></li>
 						<li><a href="" class="main__link ">Купоны</a></li>
