--- a/index.html
+++ b/index.html
@@ -65,6 +65,18 @@
 				</div>
 			</div>
 		</section>
+		<section class="page">
+			<div class="container">
+				<div class="page__body body-page">
+					<div class="body-page__title">
+						Book Pay
+					</div>
+					<div class="body-page__text">
+						это сервис, с помощью которого посетители вашего сайта смогут бронировать ваши услуги онлайн!
+					</div>
+				</div>
+			</div>
+		</section>
 <footer>
 	<div class='container'>
 		<div class="footer-body">
