--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</ul>
 				<ul class="menu__contact">
 					<li><a href="tel:89993526013" class="menu__link menu__link_tel">8 999 352 60 13</a></li>
-					<li><a href="#" class="menu__link menu__link_popup y">Заказать звонок</a></li>
+					<li><a href="#backcall" class="menu__link menu__link_popup y pl">Заказать звонок</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -84,58 +84,29 @@
 		</div>
 	</div>
 </footer>	</div>
-<div class="popup popup-callback ms_1">
+<div class="popup popup-backcall ms_1">
 	<div class="popup-table table">
 		<div class="cell">
 			<div class="popup-content">
 				<div class="popup-close"></div>
-				<div class="popup__title"></div>
-				<div class="popup__txt"></div>
 				<form action="#" class="popup-form form">
 					<div class="form-input">
-						<input autocomplete="off" type="text" name="form[]" data-value="" class="input" />
+						<input autocomplete="off" type="text" name="form[name]" data-value="Имя" class="input" />
 					</div>
 					<div class="form-input">
-						<input autocomplete="off" type="text" name="form[]" data-value="" class="input req email" />
+						<input autocomplete="off" type="tel" name="form[tel]" data-value="Телефон" class="input phone" />
 					</div>
 					<div class="form-input">
-						<input autocomplete="off" type="text" name="form[]" data-value="" class="input req" />
+						<textarea name="form[textarea]" class="input">Комментарий</textarea>
 					</div>
 					<div class="form-button">
-						<button type="submit" class="form__btn btn fw"></button>
+						<button type="submit" class="form__btn btn fw">Подать заявку на подключение</button>
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
 </div>
-
-<div class="popup popup-message ms_1">
-	<div class="popup-table table">
-		<div class="cell">
-			<div class="popup-content">
-				<div class="popup-close"></div>
-				<div class="popup__title"></div>
-				<div class="popup__txt">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti quae nobis neque nam quidem. Dolorum repellendus, voluptatibus animi debitis! Similique dolorum facilis iusto atque laborum minima omnis ipsam rerum ab!
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-
-
-<div class="popup popup-video">
-	<div class="popup-table table">
-		<div class="cell">
-			<div class="popup-close"></div>
-			<div class="popup-video__value"></div>
-		</div>
-	</div>
-</div>
-
-
-
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 <script src="js/vendors.js"></script>
