--- a/#source/popup.html
+++ b/#source/popup.html
@@ -21,4 +21,17 @@
 		</div>
 	</div>
 </div>
+<div class="popup popup-contact ms_1">
+	<div class="popup-table table">
+		<div class="cell">
+			<div class="popup-content contact">
+				<div class="popup-close contact"></div>
+				<div class="popup-title">Контакты для связи:</div>
+				<div class="popup-email">E-mail: pochta@book-pay.ru</div>
+				<div class="popup-phone">Телефон: + 7 (997) 56-66-65</div>
+				<div><a href="#" class="popup-link popup__close">Закрыть</a></div>
+			</div>
+		</div>
+	</div>
+</div>
 
