03,01,21 16,28 - закончил второй блок

--- a/#source/popup.html
+++ b/#source/popup.html
@@ -1,9 +1,9 @@
-<div class="popup popup-backcall ms_1">
+<div class="popup popup-backcall">
 	<div class="popup-table table">
 		<div class="cell">
 			<div class="popup-content">
 				<div class="popup-close"></div>
-				<form action="#" class="popup-form form">
+				<form action="#" class="popup-form form" data-ms="ms_1">
 					<div class="form-input">
 						<input autocomplete="off" type="text" name="form[name]" data-value="Имя" class="input" />
 					</div>
@@ -21,7 +21,7 @@
 		</div>
 	</div>
 </div>
-<div class="popup popup-contact ms_1">
+<div class="popup popup-message ms_1">
 	<div class="popup-table table">
 		<div class="cell">
 			<div class="popup-content contact">
