--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<ul class="menu__list">
 					<li><a href="" class="menu__link ">Возможности</a></li>
 					<li><a href="" class="menu__link ">Контакты</a></li>
-					<li><a href="" class="menu__link active">Активировать сертификат</a></li>
+					<li><a href="" class="menu__link ">Активировать сертификат</a></li>
 					<li><a href="" class="menu__link ">Цены</a></li>
 				</ul>
 				<ul class="menu__contact">
@@ -54,7 +54,7 @@
 					<ul class="main__list">
 						<li><a href="" class="main__link ">Запись</a></li>
 						<li><a href="" class="main__link ">Учет</a></li>
-						<li><a href="" class="main__link y">Бронирование</a></li>
+						<li><a href="" class="main__link ">Бронирование</a></li>
 						<li><a href="" class="main__link ">Аналитика</a></li>
 						<li><a href="" class="main__link ">Подарочные карты</a></li>
 						<li><a href="" class="main__link ">Купоны</a></li>
@@ -77,6 +77,7 @@
 				</div>
 			</div>
 		</section>
+		
 <footer>
 	<div class='container'>
 		<div class="footer-body">
@@ -84,12 +85,12 @@
 		</div>
 	</div>
 </footer>	</div>
-<div class="popup popup-backcall ms_1">
+<div class="popup popup-backcall">
 	<div class="popup-table table">
 		<div class="cell">
 			<div class="popup-content">
 				<div class="popup-close"></div>
-				<form action="#" class="popup-form form">
+				<form action="#" class="popup-form form" data-ms="ms_1">
 					<div class="form-input">
 						<input autocomplete="off" type="text" name="form[name]" data-value="Имя" class="input" />
 					</div>
@@ -107,7 +108,7 @@
 		</div>
 	</div>
 </div>
-<div class="popup popup-contact ms_1">
+<div class="popup popup-message ms_1">
 	<div class="popup-table table">
 		<div class="cell">
 			<div class="popup-content contact">
