--- a/#source/header.html
+++ b/#source/header.html
@@ -17,7 +17,7 @@
 				<ul class="menu__list">
 					<li><a href="" class="menu__link ">Возможности</a></li>
 					<li><a href="" class="menu__link ">Контакты</a></li>
-					<li><a href="" class="menu__link active">Активировать сертификат</a></li>
+					<li><a href="" class="menu__link ">Активировать сертификат</a></li>
 					<li><a href="" class="menu__link ">Цены</a></li>
 				</ul>
 				<ul class="menu__contact">
