--- a/index.html
+++ b/index.html
@@ -77,7 +77,33 @@
 				</div>
 			</div>
 		</section>
-		
+		<section class="section-wrapper">
+			<div class="section-wrapper__header">Возможности</div>
+			<div class="section">
+				<!-- *главный обьект -->
+				<div class="section__content">
+					<!-- ограничивающий контейнер (именно внутри главного обьекта) -->
+					<div class="section__container">
+						<div class="section__body body-section">
+							<!-- *КОНТЕНТ -->
+							<div class="body-section__title">
+								Онлайн учёт бронирований
+							</div>
+							<div class="body-section__text">
+								Вы сможете в реальном времени наблюдать за своими заявками и их обработки для оперативного реагирования!
+							</div>
+							<div class="main__btn">
+								<a href="#" class="main__btn-link">Подать заявку на подключение</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- *главный обьект -->
+				<div class="section__image" data-move='section__body,0,992.98'>
+					<img src="img\ipad.jpg" alt="" />
+				</div>
+			</div>
+		</section>
 <footer>
 	<div class='container'>
 		<div class="footer-body">
